@@ -3,6 +3,7 @@
   - support array initialization in any place.
     new int[] { 1, 2, 3} is used in any place.
   - add temporary JIT code for preparation for JIT compile
+  - fix assign excecution order
 0.0302 2017-12-07
   - add eval block stack max length
   - fix next statement bug
